[project]
name = "ttyz"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
    "pyright",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = ["examples", ".venv", "setup.py"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C4", "SIM", "RET", "PTH"]
ignore = ["E501", "E701", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
